--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
         <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"> <!--Open Sans-->
         <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet"> <!--Montserrat-->
 
+
+        <!--Font Awesome
+        ==============================================-->
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     </head>
 
     <body>
@@ -29,7 +33,7 @@
         <!--Header
         ==============================================-->
         <header>
-            <div class="header">
+            <div class="header" id="home">
                     <nav>
                         <ul id="nav" class="nav">
                             <li class="current"><a class="smoothscroll" href="#home">HOME</a></li>
@@ -49,7 +53,7 @@
         ==============================================-->
 
                 <div class="row">
-                <div class="column">
+                <div class="column" id="left-column">
                     <h3>Overview</h3>
                 </div>
                 <div class="column">
@@ -84,6 +88,14 @@
                     <div class="row">
                             <div class="column">
                                 <h2>Looking to start a project? <span id="lets-talk"><a href="mailto: arbonillagarcia@gmail.com" class="mailto">Let's talk.</a></span></h2>
+                                <i class="far fa-envelope"></i>
+                                <p class="email">arbonillagarcia@gmail.com</p>
+                                <br>
+                                <i class="fab fa-facebook-f"></i>
+                                <a href="https://www.facebook.com/abonillagarcia01" class="facebook">Antonio Bonilla-Garcia</a>
+                                <br>
+                                <i class="fas fa-angle-up"></i>
+                                <p class="goingup"><a href="#home" class="up">Going up?</a></p>
                             </div>
                             </div>
                 </div>
