Added Browser Icon and Fixed margins.
title.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 
         <!--Title
         ==============================================-->
-        <title>Antonio Bonilla-Garcia</title>
+        <title>Antonio Bonilla-Garcia | Portfolio</title>
+        <link rel="icon" href="images/browsericon.png">
         <!--Mobile View
         ==============================================-->
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -13,6 +14,7 @@
         ==============================================-->
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/nav.css">
+        <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
         <!--JS
         ==============================================-->
@@ -34,33 +36,33 @@
         ==============================================-->
         <header>
             <div class="header" id="home">
-                    <nav>
-                        <ul id="nav" class="nav">
-                            <li class="current"><a class="smoothscroll" href="#home">HOME</a></li>
-                            <li><a class="smoothscroll" href="#about">ABOUT</a></li>
-                            <li><a class="smoothscroll" href="#contact">CONTACT</a></li>
-                        </ul>
-                    </nav>
-                </header>
-                <div class="banner">
-                    <div class="banner-text">
-                        <img src="images/logo.png" class="responsive-logo">
-                        <h2>Hello. I'm Antonio Bonilla-Garcia, and this is my portfolio.</h2>
-                    </div>
+                <nav>
+                    <ul id="nav" class="nav">
+                        <li class="current"><a class="smoothscroll" href="#home">HOME</a></li>
+                        <li><a class="smoothscroll" href="#about">ABOUT</a></li>
+                        <li><a class="smoothscroll" href="#contact">CONTACT</a></li>
+                    </ul>
+                </nav>
+            </header>
+            <div class="banner">
+                <div class="banner-text">
+                    <img src="images/logo.png" class="responsive-logo">
+                    <h2>Hello. I'm Antonio Bonilla-Garcia, and this is my portfolio.</h2>
                 </div>
+            </div>
 
         <!--Beginning of information
         ==============================================-->
 
                 <div class="row">
-                <div class="column" id="left-column">
+                    <div class="column" id="left-column">
                     <h3>Overview</h3>
+                    </div>
+                        <div class="column">
+                            <h3>I am multidisciplinary <span class="overview-colors">designer</span> wanting to help create awesome identities for companies in my community. I am currently specializing in <span class="overview-colors">web design</span> and <span class="overview-colors">development</span>. If you want to learn more keep scrolling.</h3>
+                        </div>
+                    </div>
                 </div>
-                <div class="column">
-                    <h3>I am multidisciplinary <span class="overview-colors">designer</span> wanting to help create awesome identities for companies in my community. I am currently specializing in <span class="overview-colors">web design</span> and <span class="overview-colors">development</span>. If you want to learn more keep scrolling.</h3>
-                </div>
-                </div>
-            </div>
         <!--Parallax Scrolling
         ==============================================-->
             <div class="parallax"></div>
@@ -73,9 +75,9 @@
                         <h3><img src="images/me.jpg" class="me"></h3>
                     </div>
                     <div class="column" id="right-column">
-                        <h3>I love creating ideas in my head to than turning them into reality, in this case, <span class="overview-colors">web development</span> and <span class="overview-colors">design</span>. </p><p>When i'm not creating websites, I perform with <span class="overview-colors">The Cadets Drum and Bugle Corps</span> playing trumpet. I also love to hang out with my friends and to play video games during my spare time.</p><p>In the future, I hope to go into a <span class="overview-colors">technology</span> field and keep web development as a hobby on the side.</h3>
+                        <div data-aos="fade-up"><h3>I love creating ideas in my head to than turning them into reality, in this case, <span class="overview-colors">web development</span> and <span class="overview-colors">design</span>. </p><p>When i'm not creating websites, I perform with <span class="overview-colors">The Cadets Drum and Bugle Corps</span> playing trumpet. I also love to hang out with my friends and to play video games during my spare time.</p><p>In the future, I hope to go into a <span class="overview-colors">technology</span> field and keep web development as a hobby on the side.</h3></div>
                     </div>
-                    </div>
+                </div>
             </div>
         <!--Parallax Scrolling Two
         ==============================================-->           
@@ -86,16 +88,22 @@
 
                 <div class="contact-section" id="contact">
                     <div class="row">
-                            <div class="column">
-                                <h2>Looking to start a project? <span id="lets-talk"><a href="mailto: arbonillagarcia@gmail.com" class="mailto">Let's talk.</a></span></h2>
-                                <i class="far fa-envelope"></i>
-                                <p class="email">arbonillagarcia@gmail.com</p>
-                                <br>
-                                <i class="fas fa-angle-up"></i>
-                                <p class="goingup"><a href="#home" class="up">Going up?</a></p>
-                            </div>
-                            </div>
+                        <div class="column">
+                            <h2>Looking to start a project? <span id="lets-talk"><a href="mailto: arbonillagarcia@gmail.com" class="mailto">Let's talk.</a></span></h2>
+                            <i class="far fa-envelope"></i>
+                            <p class="email">arbonillagarcia@gmail.com</p>
+                            <br>
+                            <i class="fas fa-angle-up"></i>
+                            <p class="goingup"><a href="#home" class="up">Going up?</a></p>
+                        </div>
+                    </div>
                 </div>
+        <!--AOS Transition Script
+        ==============================================-->
+        <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+        <script>
+            AOS.init();
+        </script>
     </body>
 
 </html>
