Added Twitter Link
Twitter link added and changed around the colors

--- a/index.html
+++ b/index.html
@@ -93,6 +93,9 @@
                             <i class="far fa-envelope"></i>
                             <p class="email">arbonillagarcia@gmail.com</p>
                             <br>
+                            <i class="fab fa-twitter"></i>
+                            <p class="twitter"><a href="https://twitter.com/arbonillagarcia" class="twitter-account">Antonio Bonilla-Garcia</a></p>
+                            <br>
                             <i class="fas fa-angle-up"></i>
                             <p class="goingup"><a href="#home" class="up">Going up?</a></p>
                         </div>
