Fixed up wording
Some wording was just not right so I went back to fix it up it up to make it sound better.

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <h3>Overview</h3>
                     </div>
                         <div class="column">
-                            <h3>I am multidisciplinary <span class="overview-colors">designer</span> wanting to help create awesome identities for companies in my community. I am currently specializing in <span class="overview-colors">web design</span> and <span class="overview-colors">development</span>. If you want to learn more keep scrolling.</h3>
+                            <h3>I am multidisciplinary <span class="overview-colors">designer</span> wanting to help create awesome identities for companies in my community. I am currently specializing in <span class="overview-colors">web design</span> and <span class="overview-colors">development</span>. If you want to learn more, keep scrolling.</h3>
                         </div>
                     </div>
                 </div>
@@ -75,7 +75,7 @@
                         <h3><img src="images/me.jpg" class="me"></h3>
                     </div>
                     <div class="column" id="right-column">
-                        <div data-aos="fade-up"><h3>I love creating ideas in my head to than turning them into reality, in this case, <span class="overview-colors">web development</span> and <span class="overview-colors">design</span>. </p><p>When i'm not creating websites, I perform with <span class="overview-colors">The Cadets Drum and Bugle Corps</span> playing trumpet. I also love to hang out with my friends and to play video games during my spare time.</p><p>In the future, I hope to go into a <span class="overview-colors">technology</span> field and keep web development as a hobby on the side.</h3></div>
+                        <div data-aos="fade-up"><h3>I love creating ideas in my head to than turning them into reality, in this case, <span class="overview-colors">web development</span> and <span class="overview-colors">design</span>. </p><p>When i'm not creating websites, I am performing with <span class="overview-colors">The Cadets Drum and Bugle Corps</span> playing trumpet along side my friends. I also love to hang out with my friends back at home to play video games during my spare time.</p><p>In the future, I hope to go into a <span class="overview-colors">technology</span> field and to keep web development as a hobby on the side.</h3></div>
                     </div>
                 </div>
             </div>
