--- a/index.html
+++ b/index.html
@@ -38,16 +38,16 @@
             <div class="header" id="home">
                 <nav>
                     <ul id="nav" class="nav">
-                        <li class="current"><a class="smoothscroll" href="#home">HOME</a></li>
-                        <li><a class="smoothscroll" href="#about">ABOUT</a></li>
-                        <li><a class="smoothscroll" href="#contact">CONTACT</a></li>
+                        <li class="current"><a class="smoothscroll" href="#home"><div class="animatedUnder">HOME</div></a></li>
+                        <li><a class="smoothscroll" href="#about"><div class="animatedUnder">ABOUT</div></a></li>
+                        <li><a class="smoothscroll" href="#contact"><div class="animatedUnder">CONTACT</div></a></li>
                     </ul>
                 </nav>
             </header>
             <div class="banner">
                 <div class="banner-text">
                     <img src="images/logo.png" class="responsive-logo">
-                    <h2>Hello. I'm Antonio Bonilla-Garcia, and this is my portfolio.</h2>
+                    <h2>Hello. I'm <div class="animatedUnder">Antonio Bonilla-Garcia</div>, and this is my portfolio.</h2>
                 </div>
             </div>
 
@@ -56,10 +56,14 @@
 
                 <div class="row">
                     <div class="column" id="left-column">
-                    <h3>Overview</h3>
+                    <h3 class="overview">Overview</h3>
                     </div>
                         <div class="column">
-                            <h3>I am multidisciplinary <span class="overview-colors">designer</span> wanting to help create awesome identities for companies in my community. I am currently specializing in <span class="overview-colors">web design</span> and <span class="overview-colors">development</span>. If you want to learn more, keep scrolling.</h3>
+                            <h3>I am currently a Junior at West Chester University of Pennsylvania studying in 
+                                <span class="overview-colors">computer science</span>. Design and <span class="overview-colors">development</span>
+                                 has always been a passion and started back in 10th grade with an intro to web
+                                 development class. Little did I know how far I would go with those <span class="overview-colors">skills</span>. Scroll down to read 
+                                 more about me!</h3>
                         </div>
                     </div>
                 </div>
@@ -75,7 +79,9 @@
                         <h3><img src="images/me.jpg" class="me"></h3>
                     </div>
                     <div class="column" id="right-column">
-                        <div data-aos="fade-up"><h3>I love creating ideas in my head to than turning them into reality, in this case, <span class="overview-colors">web development</span> and <span class="overview-colors">design</span>. </p><p>When i'm not creating websites, I am performing with <span class="overview-colors">The Cadets Drum and Bugle Corps</span> playing trumpet along side my friends. I also love to hang out with my friends back at home to play video games during my spare time.</p><p>In the future, I hope to go into a <span class="overview-colors">technology</span> field and to keep web development as a hobby on the side.</h3></div>
+                        <div data-aos="fade-up">
+                            <h3>I am a developer and aspiring <span class="overview-colors">UX/UI</span> designer based in Pennsylvania. Designing front end work helps me to express aesthetic through my form of <span class="overview-colors">art</span>. <p></p> I am versed in raw HTML, CSS, and JavaScript. My focus of interest and <span class="overview-colors">learning</span> currently is React and developing single-page websites. <p></p> As a student at West Chester University I have learned not only how to code <span class="overview-colors">front end</span> but also backend applications and how to create and design well made applications. <p></p> During my freetime, when not in an active learning mode, I play <span class="overview-colors">video games</span> with my friends to help me decompress. Not only do I play video games but I also am a member of the world renowned drum and bugle corps The Cadets playing trumpet.</h3>              
+                        </div>
                     </div>
                 </div>
             </div>
