--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
         ==============================================-->
             <div class="about-section" id="about">
                 <div class="row">
-                    <div class="column">
-                        <h3><img src="images/me.jpg" class="me"></h3>
+                    <div class="left-column">
+                        <img src="images/me.jpg" class="me">
                     </div>
                     <div class="column" id="right-column">
                         <div data-aos="fade-up">
