added ease of use

--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
             <div class="banner">
                 <div class="banner-text">
                     <img src="images/logo.png" class="responsive-logo">
+                        <div>
+                            <h4 class="learn"><i class="fas fa-arrow-down"></i> learn more about me</h4>
+                        </div>
                     <h2>Hello. I'm <div class="animatedUnder">Antonio Bonilla-Garcia</div>, and this is my portfolio.</h2>
                 </div>
             </div>
