Added a github link to my contact page

--- a/index.html
+++ b/index.html
@@ -105,6 +105,9 @@
                             <i class="fab fa-twitter"></i>
                             <p class="twitter"><a href="https://twitter.com/arbonillagarcia" class="twitter-account">Antonio Bonilla-Garcia</a></p>
                             <br>
+                            <i class="fab fa-github"></i>
+                            <p class="github"><a href="https://github.com/arbonillagarcia" class="github-account">GitHub</a></p>
+                            <br>
                             <i class="fas fa-angle-up"></i>
                             <p class="goingup"><a href="#home" class="up">Going up?</a></p>
                         </div>
